overflow bug fixed

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -6,11 +6,15 @@
 
 .App {
   text-align: center;
+  overflow-x: hidden;
   
 }
 
 body, html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
+
+  // border: 2px solid red;
 }
 
 
